--- a/.gitignore
+++ b/.gitignore
@@ -146,9 +146,9 @@ dmypy.json
 
 # Lightning-Hydra-Template
 configs/local/default.yaml
-# /data/
-# /logs/
-# /tmp/
+/data/
+/logs/
+/tmp/
 /tmp/base
 .env
 
