--- a/configs/train.yaml
+++ b/configs/train.yaml
@@ -4,8 +4,8 @@
 # order of defaults determines the order in which configs override each other
 defaults:
   - _self_
-  - data: ppe_data
-  - model: ppe_model
+  - data: ambulance_data
+  - model: ambulance_model
   - callbacks: default
   - logger: null # set logger here or use command line (e.g. `python train.py logger=tensorboard`)
   - trainer: gpu
