--- a/configs/model/ambulance_model.yaml
+++ b/configs/model/ambulance_model.yaml
@@ -1,10 +1,9 @@
 # PPE model config
 
-_target_: src.models.ppe_model.PpeLightningModel
+_target_: src.models.ambulance_model.AmbulanceLightningModel
 
 backbone: mobilenetv3 # model backbone
-helmet_class: 5 # number of classes for helmet
-vest_class: 5 # number of classes for vest
-boots_class: 2 # number of classes for boots
+categories: 
+  - ambulance
 lr: 0.0001 # learning rate
 pretrained: true # use pretrained weights
