--- a/configs/model/ambulance_model.yaml
+++ b/configs/model/ambulance_model.yaml
@@ -5,5 +5,6 @@ _target_: src.models.ambulance_model.AmbulanceLightningModel
 backbone: mobilenetv3 # model backbone
 categories: 
   - ambulance
+  - car
 lr: 0.0001 # learning rate
 pretrained: true # use pretrained weights
